--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,10 @@
 {% block body %}
     <div class="mdl-grid row">
     {% include "flash.html" %}
+
     {% for item in manga %}
-        <div class="col s12 m6 l3">
-        <div class="card medium">
+        <div class="col s12 m6 l3 offset-3 center-align">
+        <div class="card medium ">
             <div class="card-image waves-effect waves-block waves-light" >
                 <a href="{{ url_for('itemInfo', name=item.name, genre=item.genre) }}"><img  src="{{ item.image }}"></a>
             </div>
