--- a/templates/itemInfo.html
+++ b/templates/itemInfo.html
@@ -13,8 +13,8 @@
           <p>I am a very simple card. I am good at containing small bits of information.</p>
         </div>
         <div class="card-action">
-            <a class="waves-effect purple darken-4 btn-large" type="submit" href="{{ manga.name }}/edit">Edit</a>
-            <a class="waves-effect red accent-4 btn-large" type="submit" href="{{ manga.name }}/delete">Delete</a>
+            <a  href="{{ manga.name }}/edit"><button class="waves-effect purple darken-4 btn-large" type="submit" >Edit</button></a>
+            <a  href="{{ manga.name }}/delete"><button class="waves-effect red accent-4 btn-large" type="submit" >Delete</button></a>
         </div>
       </div>
     </div>
